<resources>
    <string name="app_name">TheMoviesDB</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload_gallery">Galeria</string>
    <string name="upload_cam">Camara</string>
    <string name="txt_upload_photo">Subir Foto a Firestore</string>
    <string name="tv_txt_upload">Elige de donde quieres subirla</string>
    <string name="btn_upload">Subir Imagen</string>
    <string name="tv_location">Ubicacion Actual</string>
    <string name="loading">Cargando</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="ver_ultimas_ubicaciones">Ver ultimas ubicaciones</string>
    <string name="hour">hora</string>
    <string name="coordenadas">Coordenadas</string>
    <string name="imagenes">Imagenes en Storage</string>
</resources>