<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".ui.UploadPhotoFragment">

    <LinearLayout
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_marginTop="20dp"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_upload_photo" />

        <ImageView
            android:id="@+id/iv_image"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:src="@drawable/ic_baseline_photo_camera_24"
            android:layout_height="150dp">
        </ImageView>

        <TextView
            android:id="@+id/tv_upload_text"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_txt_upload" />

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_margin="10dp"
                android:id="@+id/uploadGallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_gallery" />


            <Button
                android:layout_margin="10dp"
                android:id="@+id/uploadCamara"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_cam" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_img_storage"
            android:textColor="@color/white"
            android:text="@string/imagenes"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Button>



    </LinearLayout>

</RelativeLayout>