<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".ui.LocationFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_marginTop="20dp"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_location" />

        <TextView

            android:id="@+id/tv_location"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coordenadas" />

        <TextView
            android:id="@+id/tv_hour"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour" />


        <Button
            android:id="@+id/btn_locations"
            android:text="@string/ver_ultimas_ubicaciones"
            android:textColor="@color/white"
            android:layout_margin="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Button>


    </LinearLayout>

</FrameLayout>